# osux-tools

./: Makefile.am  README.md  configure.ac
po/: Makevars  POTFILES.in
scripts/: PKGBUILD
src/: Makefile.am
src/dbctl/: .gitignore  Makefile.am
src/parsers/: .gitignore  Makefile.am
src/taiko/: .gitignore  Makefile.am  generator.c  generator.ggo  generator_cmdline.c  generator_cmdline.h
